Proceed Transaction at Sales nalang pwede na mag dashboard at audit trail after

--- a/STOCKNDRIVE/pos.resx
+++ b/STOCKNDRIVE/pos.resx
@@ -1098,4 +1098,12 @@
         PU3TjQ8j+k7FelEwcc588C/blevR+flkZ12HRdEXu17+KUpnpGoAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="btnFilter.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPCAYAAAA71pVKAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAIZJREFUOE9jGHAwHYj/k4A3AzEcgASUIUyCQAmIQerhgBGI/0BpfAAk/xvCRAUs
+        QAwyAB8AyTNBmJhAB4j/ATG6ApCNIKdqgHl4QCgQgwyAeQFkEEhjIphHBKgF4vcQJtiPDRAm8QAWoigh
+        SyygWDPIv3/BPBIBKFpAmB/MIxFgizJqAQYGAP+nI22I23f7AAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
